# snowflake

./: CMakeLists.txt  README.md
include/snowflake/: snowflake.h
include/snowflake/protos/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
proto/: Makefile  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
proto/protos/: service.proto
src/: benchmark_tester.cpp  main.cpp  server.cpp  snowflake.cpp  tester.cpp
